@@ -20,6 +20,9 @@ POCO_TARGET_OSARCH ?= x86_64
 POCO_HOST_OSARCH   := $(POCO_TARGET_OSARCH)
 ARCHFLAGS          ?= -arch $(POCO_TARGET_OSARCH)
 
+ifeq ($(POCO_TARGET_OSARCH),i386)
+RORELOCS = -read_only_relocs suppress
+endif
 
 #
 # Tools
@@ -30,7 +33,7 @@ LINK    = $(CXX) -bind_at_load
 LIB     = libtool -static -o
 RANLIB  = ranlib
 SHLIB   = $(CXX) -dynamiclib -o $@
-DYLIB   = $(CXX) -dynamic -bundle -read_only_relocs suppress -Wl,-bind_at_load -o $@ 
+DYLIB   = $(CXX) -dynamic -bundle $(RORELOCS) suppress -Wl,-bind_at_load -o $@ 
 SHLIBLN = $(POCO_BASE)/build/script/shlibln
 STRIP   = 
 DEP     = $(POCO_BASE)/build/script/makedepend.clang
