@@ -34,6 +34,7 @@ Release 1.5.2 (2013-03-??)
 - fixed GH #131: no timezone global var on OpenBSD
 - fixed GH #102: Some subprojects don't have x64 solutions for VS 2010
 - added GH #75: Poco::Uri addQueryParameter method
+- Poco::Environment::osDisplayName() now recognized Windows 8/Server 2012
 
 Release 1.5.1 (2013-01-11)
 ==========================
